feat: complete improvement import vertical slice (frontend → db)
- Added improvements module to AdminImportPage
- Implemented /api/admin/import/improvements endpoint
- Added ImprovementImportService + repository import logic (upsert + delete obsolete)
- Rebuilt improvements table (constructible_key + description_lines)
- Added Flyway migration for new improvements schema
- Aligned ImprovementEntity with district-style element collection
- Updated JPA repository to key-based import pattern
- Verified idempotent import (insert → unchanged on re-run)

Improvement slice now mirrors districts import structure.